cabal-version: 3.0

name: fenster
version: 0.1.0.0
synopsis: Transform a list based on a narrow context around each element.
-- description:
-- bug-reports:
-- license:
license-file: LICENSE
author: Eric Demko
maintainer: edemko@protonmail.com
copyright: 2020, Eric Demko
-- category:
build-type: Simple
extra-source-files: CHANGELOG.md

library
  exposed-modules: Control.Window.List
  -- other-modules:
  -- other-extensions:
  build-depends:
    , base >=4.14 && <5
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -O2
